working on progress bar.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 		</header>
 
-		<div class="group"></div>
+		<div class="clearfix"></div>
 
 		<section id="about">
 			<div class="herotron-wrap">
@@ -112,7 +112,7 @@
 
 
 									</div>
-									<div class="group"></div>
+									<div class="clearfix"></div>
 									<div class="project-description">
 										<h4>Technologies Used: <small>HTML5, CSS</small></h4>
 										<p><a href="http://dgeero89.github.io/web-components/components/buttons/" target="_blank">Live Demo</a> | <a href="https://github.com/DGeero89/web-components" class="github-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source Code</a> </p>
@@ -152,7 +152,7 @@
 									  </div>
 									  <label class="carousel--bullet carousel--bullet__flip" for="sidebar-ci-2"></label>
 									</div>
-									<div class="group"></div>
+									<div class="clearfix"></div>
 									<div class="project-description">
 										<h4>Technologies Used: <small>HTML5, CSS</small></h4>
 										<p><a href="http://dgeero89.github.io/profile-sidebar/" target="_blank">Live Demo</a> | <a href="https://github.com/DGeero89/profile-sidebar" class="github-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source Code</a> </p>
@@ -204,7 +204,7 @@
 									  </div>
 									  <label class="carousel--bullet carousel--bullet__flip" for="forms-ci-3"></label>
 									</div>
-									<div class="group"></div>
+									<div class="clearfix"></div>
 									<div class="project-description">
 										<h4>Technologies Used: <small>HTML5, CSS, JavaScript</small></h4>
 										<p><a href="http://dgeero89.github.io/profile-sidebar/" target="_blank">Live Demo</a> | <a href="https://github.com/DGeero89/profile-sidebar" class="github-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source Code</a> </p>
@@ -256,7 +256,7 @@
 									  </div>
 									  <label class="carousel--bullet carousel--bullet__flip" for="calculator-ci-3"></label>
 									</div>
-									<div class="group"></div>
+									<div class="clearfix"></div>
 									<div class="project-description">
 										<h4>Technologies Used: <small>HTML5, CSS, JavaScript</small></h4>
 										<p><a href="http://dgeero89.github.io/calculator/" target="_blank">Live Demo</a> | <a href="https://github.com/DGeero89/calculator" class="github-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source Code</a> </p>
@@ -308,7 +308,7 @@
 									  </div>
 									  <label class="carousel--bullet carousel--bullet__flip" for="products-ci-3"></label>
 									</div>
-									<div class="group"></div>
+									<div class="clearfix"></div>
 									<div class="project-description">
 										<h4>Technologies Used: <small>HTML5, CSS, JavaScript</small></h4>
 										<p><a href="http://dgeero89.github.io/product-listing-page/" target="_blank">Live Demo</a> | <a href="https://github.com/DGeero89/product-listing-page" class="github-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source Code</a> </p>
@@ -323,11 +323,20 @@
 			</div>
 		</section>
 
+		<div class="clearfix"></div>
+
 		<section id="skills">
 			<div class="grid--fluid">
 				<article class="article-content">
 					<header>
 						<h2>Skills</h2>
+						<div class="grid__row">
+				        <div class="grid__col12">
+				            <div class="progress">
+										    <div class="progress__item--60-prog progress__item--red"></div>
+										</div>
+				        </div>
+				    </div>
 					</header>
 				</article>
 			</div>
