--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						</header>
 						<p>Here is a sampling of some of the projects I have build while studying at the prestigious <a href="https://bovacademy.com/" target="_blank">Bov Academy</a>.</p>
 						<div class="vert-tab-wrapper">
-              <div class="vert-tab__tabGroup">
+              <div class="vert-tab__tabGroup skills-tab-group">
                 
                 <input type="radio" name="tabGroup1" id="vert-tab__rad1" class="vert-tab__radio" checked="checked"/>
                 <label class="vert-tab-label" for="vert-tab__rad1">Button Components</label>
@@ -117,6 +117,7 @@
 										<h4>Technologies Used: <small>HTML5, CSS</small></h4>
 										<p><a href="http://dgeero89.github.io/web-components/components/buttons/" target="_blank">Live Demo</a> | <a href="https://github.com/DGeero89/web-components" class="github-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i> Source Code</a> </p>
 									</div>
+                <div class="clearfix"></div>
                 </div> 
 
 
@@ -317,26 +318,52 @@
 
                 <!--tab content -->
               </div> <!--vert-tab-group-->
-            </div> <!--vert tab wrapper -->
+            </div> 
+            <!--vert tab wrapper -->
 					</article>
 				</div>
 			</div>
 		</section>
-
-		<div class="clearfix"></div>
 
 		<section id="skills">
 			<div class="grid--fluid">
 				<article class="article-content">
 					<header>
 						<h2>Skills</h2>
-						<div class="grid__row">
-				        <div class="grid__col12">
-				            <div class="progress">
-										    <div class="progress__item--60-prog progress__item--red"></div>
-										</div>
+						<div class="skills__wrap">
+							<div class="grid__row">
+								 <div class="grid__col12">
+									<div class="progress progress--blue">
+								    <div class="progress__item--60-prog progress__item--red"></div>
+									</div>
+				        </div>			        
+				    	</div>
+					    <div class="grid__row">
+					    	<div class="grid__col9">
+									Frontend 60%
+					      </div>
+					      <div class="grid__col3">
+									Backend  40%
 				        </div>
-				    </div>
+					    </div>
+					    <div class="grid__row">
+					    	<div class="grid__col6">
+					    		<div class="c-graph" style="border: 1px solid ">
+					    			<h3 class="c-graph-title">Frontend Development</h3>
+					    		</div>
+					    	</div>
+					    	<div class="grid__col6">
+					    		<div class="c-graph" style="border: 1px solid ">
+					    			<h3 class="c-graph-title">Backend Development</h3>
+					    		</div>
+					    	</div>
+					    </div>
+					    <div class="grid__row">
+					    	<div class="grid__col6 grid__offset-by-3" style="border: 1px solid ">
+					    		<h3 class="c-graph-title">Other Skills</h3>
+					    	</div>
+					    </div>
+						</div>
 					</header>
 				</article>
 			</div>
